tests/typing/bad/testfile-arrow-3.c

struct S { int a; };
int main() { int x; x->a; }
